bindings/swift/Sources/CProven/include/proven.h

typedef struct ProvenFloatResult {
    ProvenStatus status;
    double value;
} ProvenFloatResult;
/* ============================================================================
 * SafeCalculator
 * ============================================================================ */

ProvenFloatResult proven_calculator_eval(const uint8_t* ptr, size_t len);