bindings/matlab/proven_header.h

struct FloatResult { int32_t status; double  value; };