bindings/crystal/src/proven/lib_proven.cr


  fun uuid_v4_generate(uuid : Pointer(Uuid)) : Int32
  fun uuid_parse(str : Pointer(UInt8), len : LibC::SizeT, uuid : Pointer(Uuid)) : Int32
  fun uuid_parse_cstr(str : Pointer(UInt8), uuid : Pointer(Uuid)) : Int32
  fun uuid_to_string(uuid : Pointer(Uuid), buf : Pointer(UInt8), buf_size : LibC::SizeT) : Int32
  fun uuid_to_urn(uuid : Pointer(Uuid), buf : Pointer(UInt8), buf_size : LibC::SizeT) : Int32
  fun uuid_is_nil(uuid : Pointer(Uuid)) : Bool
  fun uuid_compare(a : Pointer(Uuid), b : Pointer(Uuid)) : Int32
  fun uuid_equals(a : Pointer(Uuid), b : Pointer(Uuid)) : Bool
  fun uuid_is_valid(str : Pointer(UInt8), len : LibC::SizeT) : Bool

  # ---------------------------------------------------------------------------
  # SafeCurrency (selected functions)
  # ---------------------------------------------------------------------------
  struct Money
    minor_units : Int64
    currency : Int32
  end

  struct MoneyResult
    status : Int32
    value : Money
  end

  struct CurrencyCodeResult
    status : Int32
    code : Int32
  end

  fun currency_parse_code(str : Pointer(UInt8), len : LibC::SizeT) : CurrencyCodeResult
  fun currency_is_valid_code(str : Pointer(UInt8), len : LibC::SizeT) : Bool
  fun currency_get_decimals(code : Int32) : UInt8
  fun currency_get_symbol(code : Int32) : Pointer(UInt8)
  fun currency_get_name(code : Int32) : Pointer(UInt8)
  fun currency_get_iso_code(code : Int32) : Pointer(UInt8)
  fun money_from_major(amount : Int64, currency : Int32) : Money
  fun money_from_minor(amount : Int64, currency : Int32) : Money
  fun money_zero(currency : Int32) : Money
  fun money_add(a : Money, b : Money) : MoneyResult
  fun money_sub(a : Money, b : Money) : MoneyResult
  fun money_mul(m : Money, scalar : Int64) : MoneyResult
  fun money_div(m : Money, divisor : Int64) : MoneyResult
  fun money_abs(m : Money) : MoneyResult
  fun money_negate(m : Money) : MoneyResult
  fun money_get_major(m : Money) : Int64
  fun money_get_minor(m : Money) : Int64
  fun money_get_fraction(m : Money) : Int64
  fun money_is_zero(m : Money) : Bool
  fun money_is_positive(m : Money) : Bool
  fun money_is_negative(m : Money) : Bool
  fun money_compare(a : Money, b : Money) : Int32
  fun money_same_currency(a : Money, b : Money) : Bool
  fun money_format(m : Money, buf : Pointer(UInt8), buf_size : LibC::SizeT) : Int32
  fun money_format_plain(m : Money, buf : Pointer(UInt8), buf_size : LibC::SizeT) : Int32
  fun money_format_iso(m : Money, buf : Pointer(UInt8), buf_size : LibC::SizeT) : Int32

  # ---------------------------------------------------------------------------
  # SafePhone (selected functions)
  # ---------------------------------------------------------------------------
  struct PhoneNumber
    country_code : Int32
    national_number : StaticArray(UInt8, 16)
    national_number_len : UInt8
  end

  struct PhoneResult
    status : Int32
    number : PhoneNumber
  end

  fun phone_parse(str : Pointer(UInt8), len : LibC::SizeT) : PhoneResult
  fun phone_parse_cstr(str : Pointer(UInt8)) : PhoneResult
  fun phone_is_valid(str : Pointer(UInt8), len : LibC::SizeT) : Bool
  fun phone_format_e164(number : Pointer(PhoneNumber), buf : Pointer(UInt8), buf_size : LibC::SizeT) : Int32
  fun phone_format_international(number : Pointer(PhoneNumber), buf : Pointer(UInt8), buf_size : LibC::SizeT) : Int32
  fun phone_format_national(number : Pointer(PhoneNumber), buf : Pointer(UInt8), buf_size : LibC::SizeT) : Int32
  fun phone_format_rfc3966(number : Pointer(PhoneNumber), buf : Pointer(UInt8), buf_size : LibC::SizeT) : Int32
  fun phone_get_calling_code(code : Int32) : UInt16
  fun phone_get_country_name(code : Int32) : Pointer(UInt8)
  fun phone_get_iso_alpha2(code : Int32) : Pointer(UInt8)
  fun phone_digit_count(number : Pointer(PhoneNumber)) : LibC::SizeT
  fun phone_equals(a : Pointer(PhoneNumber), b : Pointer(PhoneNumber)) : Bool

  # ---------------------------------------------------------------------------
  # SafeHex (selected functions)
  # ---------------------------------------------------------------------------
  struct HexDecodeResult
    status : Int32
    bytes_written : LibC::SizeT
  end

  struct HexEncodeResult
    status : Int32
    chars_written : LibC::SizeT
  end

  struct HexIntResult
    status : Int32
    value : UInt64
  end

  fun hex_encode(bytes : Pointer(UInt8), bytes_len : LibC::SizeT, hex : Pointer(UInt8), hex_size : LibC::SizeT) : HexEncodeResult
  fun hex_encode_upper(bytes : Pointer(UInt8), bytes_len : LibC::SizeT, hex : Pointer(UInt8), hex_size : LibC::SizeT) : HexEncodeResult
  fun hex_decode(hex : Pointer(UInt8), hex_len : LibC::SizeT, bytes : Pointer(UInt8), bytes_size : LibC::SizeT) : HexDecodeResult
  fun hex_is_valid(str : Pointer(UInt8), len : LibC::SizeT) : Bool
  fun hex_is_valid_bytes(str : Pointer(UInt8), len : LibC::SizeT) : Bool
  fun hex_constant_time_eq(a : Pointer(UInt8), a_len : LibC::SizeT, b : Pointer(UInt8), b_len : LibC::SizeT) : Bool
  fun hex_to_int(hex : Pointer(UInt8), hex_len : LibC::SizeT) : HexIntResult
  fun hex_from_int(value : UInt64, min_width : LibC::SizeT, uppercase : Bool, hex : Pointer(UInt8), hex_size : LibC::SizeT) : HexEncodeResult
  fun hex_format_spaced(hex : Pointer(UInt8), hex_len : LibC::SizeT, out_buf : Pointer(UInt8), out_size : LibC::SizeT) : HexEncodeResult
  fun hex_format_colons(hex : Pointer(UInt8), hex_len : LibC::SizeT, out_buf : Pointer(UInt8), out_size : LibC::SizeT) : HexEncodeResult
  fun hex_encode_size(bytes_len : LibC::SizeT) : LibC::SizeT
  fun hex_decode_size(hex_len : LibC::SizeT) : LibC::SizeT

  # ---------------------------------------------------------------------------
  # SafeCalculator (1 function)
  # ---------------------------------------------------------------------------
  fun proven_calculator_eval(ptr : Pointer(UInt8), len : LibC::SizeT) : FloatResult
end
